Fix copy (element can't be invisible)

--- a/_sass/_pmlr.scss
+++ b/_sass/_pmlr.scss
@@ -95,7 +95,7 @@ font-size:75%;
 /*** code button copy ***/
 
 .codebox {
-    display: none;
+
 }
 
 .bibbutton {
